-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
Type 'make' to build Lustre.
+ make -j2 -s
Making all in .
/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c: In function 'kiblnd_post_rx':
/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:206:2: error: passing argument 3 of 'ib_post_recv' from incompatible pointer type [-Werror]
rc = ib_post_recv(conn->ibc_cmid->qp, &rx->rx_wrq, &bad_wrq);
^
In file included from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_addr.h:48:0,
from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/rdma_cm.h:39,
from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd.h:75,
from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:37:
/root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_verbs.h:3758:19: note: expected 'const struct ib_recv_wr **' but argument is of type 'struct ib_recv_wr **'
static inline int ib_post_recv(struct ib_qp *qp,
^
/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c: In function 'kiblnd_post_tx_locked':
/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:977:4: error: passing argument 3 of 'ib_post_send' from incompatible pointer type [-Werror]
rc = ib_post_send(conn->ibc_cmid->qp, wr, &bad);
^
In file included from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_addr.h:48:0,
from /root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/rdma_cm.h:39,
from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd.h:75,
from /tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c:37:
/root/long_rpmbuild_dir/mlnx-ofa_kernel-devel/usr/src/ofa_kernel/default/include/rdma/ib_verbs.h:3741:19: note: expected 'const struct ib_send_wr **' but argument is of type 'struct ib_send_wr **'
static inline int ib_post_send(struct ib_qp *qp,
^
/tmp/rpmbuild-lustre-root-mv4zr5VM/BUILD/lustre-2.12.53_24_g534f10e_dirty/lnet/klnds/o2iblnd/o2iblnd_cb.c: At top level:
cc1: error: unrecognized command line option "-Wno-stringop-overflow" [-Werror]
cc1: error: unrecognized command line option "-Wno-stringop-truncation" [-Werror]
cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]
cc1: all warnings being treated as errors